[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "claude-code-fleet-support"
version = "0.0.2"
description = "AI-native multi-channel support skeleton with Chatwoot integration, unified inbox routing, and bug-lock semantics."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
  { name = "PALIOS-TAEY" }
]
dependencies = [
  "redis>=5,<6",
]

[tool.setuptools.packages.find]
include = ["lib*"]
