[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "claude-code-fleet-support"
version = "0.1.0"
description = "AI-native support intake with GitHub webhook normalization, Redis queueing, triage, routing, and bug-lock semantics."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
  { name = "PALIOS-TAEY" }
]
dependencies = [
  "fastapi>=0.115,<1",
  "redis>=5,<6",
  "uvicorn>=0.30,<1",
]

[tool.setuptools.packages.find]
include = ["lib*"]
